--- a/about.html
+++ b/about.html
@@ -67,60 +67,54 @@
 
                 <div class="col-md-offset-1 col-md-10 col-sm-12">
                     <div class="section-title">
-                        <h3>about</h3>
-                        <h2>The creative web & mobile studio and focused on brand identity, web development and
-                            social marketing.</h2>
-                    </div>
-
-                    <div class="col-md-8 col-sm-12">
-                        <img src="images/about-image.jpg" class="img-responsive" alt="About">
+                        <h3>About</h3>
                     </div>
 
                     <div class="col-md-4 col-sm-12">
-                        <h1>Studio</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                            incididunt ut labore et dolore.</p>
-                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                        <img src="images/w.png" class="img-responsive" alt="About">
+                    </div>
+
+                    <div class="col-md-8 col-sm-12">
+                        <!-- <h2>About</h2> -->
+                        <h3 style="margin-top: 0px">I'm a product designer based in Taiwan.</h3>
+                        <br>
+                        <p>Enamored with cross-domain thinking, interface design, typography, user research, team work,
+                            Javascript, React Native, Cajon, Ukulele, games experience research...</p>
+                        <br>
+                        <p>Focused on build products that people love.</p>
+
                     </div>
 
                     <div class="clearfix"></div>
-
-                    <hr>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore.</p>
-
                     <hr>
 
                     <div class="col-md-4 col-sm-6">
-                        <h3>Web Development</h3>
+                        <h3>Design</h3>
                         <ul>
-                            <li>Online Shopping Site</li>
-                            <li>Wordpress CMS</li>
-                            <li>Bootstrap themes</li>
-                            <li>Web Application</li>
-                        </ul>
-                    </div>
-
-                    <div class="col-md-4 col-sm-6">
-                        <h3>Brand Identity</h3>
-                        <ul>
-                            <li>Logo Design</li>
-                            <li>Personal Branding</li>
-                            <li>Flyer Design</li>
+                            <li>Pruduct Design</li>
+                            <li>User Research</li>
+                            <li>Prototyping</li>
                             <li>Creative Direction</li>
                         </ul>
                     </div>
 
                     <div class="col-md-4 col-sm-6">
-                        <h3>Social marketing</h3>
+                        <h3>Coding</h3>
                         <ul>
-                            <li>facebook, twitter.</li>
-                            <li>Page Maintenance</li>
-                            <li>Social media</li>
+                            <li>React Native</li>
+                            <li>Redux / MobX</li>
+                            <li>HTML / CSS / JS</li>
+                            <li>Design Systems</li>
+                        </ul>
+                    </div>
+
+                    <div class="col-md-4 col-sm-6">
+                        <h3>Tools and Skills</h3>
+                        <ul>
+                            <li>Sketch</li>
+                            <li>Photoshop</li>
+                            <li>Illustrator</li>
+                            <li>Lean UX</li>
                         </ul>
                     </div>
                 </div>
