--- a/index.html
+++ b/index.html
@@ -81,24 +81,24 @@
           <div class="container">
                <div class="row">
 
-                    <div class="col-md-4 col-sm-6">
+                    <div class="col-md-6 col-sm-6">
                          <a href="project/nail.html">
                               <div class="portfolio-thumb">
                                    <img src="images/p_l_s_e_.png" class="img-responsive" alt="Portfolio">
                                    <div class="portfolio-overlay">
                                         <div class="portfolio-item">
                                              <h3>Nail Printer App</h3>
-                                             <small>Product Design</small>
+                                             <small>Product Design<br>UX Design</small>
                                         </div>
                                    </div>
                               </div>
                          </a>
                     </div>
 
-                    <div class="col-md-4 col-sm-6">
+                    <div class="col-md-6 col-sm-6">
                          <a href="project/qrpa.html">
                               <div class="portfolio-thumb">
-                                   <img src="images/q_r_p_a_.png" class="img-responsive" alt="Portfolio">
+                                   <img src="images/q_r_p_a_2x.png" class="img-responsive" alt="Portfolio">
                                    <div class="portfolio-overlay">
                                         <div class="portfolio-item">
                                              <h3>Replay Tool on Mac</h3>
@@ -109,35 +109,35 @@
                          </a>
                     </div>
 
-                    <div class="col-md-4 col-sm-6">
-                         <a href="project/single-project.html">
+                    <div class="col-md-6 col-sm-6">
+                         <a href="#">
                               <div class="portfolio-thumb">
-                                   <img src="images/portfolio-img3.jpg" class="img-responsive" alt="Portfolio">
+                                   <img src="images/q_e_t_l.png" class="img-responsive" alt="Portfolio">
                                    <div class="portfolio-overlay">
                                         <div class="portfolio-item">
-                                             <h3>QRental</h3>
-                                             <small>IOT Service of Smart Lock</small>
+                                             <h3>IOT Service of Smart Lock</h3>
+                                             <small>UX Design</small>
                                         </div>
                                    </div>
                               </div>
                          </a>
                     </div>
 
-                    <div class="col-md-4 col-sm-6">
+                    <div class="col-md-6 col-sm-6">
                          <a href="project/su.html">
                               <div class="portfolio-thumb">
                                    <img src="images/d_c_.png" class="img-responsive" alt="Portfolio">
                                    <div class="portfolio-overlay">
                                         <div class="portfolio-item">
-                                             <h3>Skill-Up</h3>
-                                             <small>Online Course Platform</small>
+                                             <h3>Online Course Platform</h3>
+                                             <small>Product Design</small>
                                         </div>
                                    </div>
                               </div>
                          </a>
                     </div>
 
-                    <div class="col-md-4 col-sm-6">
+                    <!-- <div class="col-md-4 col-sm-6">
                          <a href="project/single-project.html">
                               <div class="portfolio-thumb">
                                    <img src="images/portfolio-img5.jpg" class="img-responsive" alt="Portfolio">
@@ -163,7 +163,7 @@
                                    </div>
                               </div>
                          </a>
-                    </div>
+                    </div> -->
 
                     <div class="col-md-12 col-sm-12 text-center">
                          <h3>Any opportunities and challenges are welcome. </h3>
@@ -188,7 +188,7 @@
                <div class="row">
 
                     <div class="col-md-3 col-sm-3">
-                         <a href="../index.html"><img src="../images/wlogo.png"></a>
+                         <a href="index.html"><img src="images/wlogo.png"></a>
                     </div>
 
                     <div class="col-md-4 col-sm-4">
