--- a/project/nail.html
+++ b/project/nail.html
@@ -65,6 +65,8 @@
 
                     <div class="col-md-offset-1 col-md-10 col-sm-12">
                          <h1>Polishee</h1>
+                         <div class="clearfix"></div>
+                         <hr>
                          <p>I am the sole designer on a 5-person team. We cooperate with a hardware company to build an
                               app for people to paint any images on their nails.</p>
 
@@ -92,14 +94,20 @@
                               <p>2018-19</p>
                          </div>
 
+                         <div class="clearfix"></div>
+                         <hr>
+
                          <div class="col-md-12 col-sm-12 text-center">
-                              <strong>About This Product</strong>
+                              <h2>About This Product</h2>
                               <p>This app allows users to choose images from our library or upload from album and
                                    preview on a mock hand to see the result of nail arts.</p>
                          </div>
 
+                         <div class="clearfix"></div>
+                         <hr>
+
                          <div class="col-md-12 col-sm-12 text-center">
-                              <strong>Key Features</strong>
+                              <h2>Key Features</h2>
                          </div>
 
                          <div class="col-md-12 col-sm-12">
@@ -139,8 +147,11 @@
                               </div>
                          </div>
 
+                         <div class="clearfix"></div>
+                         <hr>
+
                          <div class="col-md-12 col-sm-12 text-center">
-                              <strong>User and Audience</strong>
+                              <h2>User and Audience</h2>
                               <p>The target users are young girls interesting in nail arts and passionating about DIY at
                                    home. These users like innovation products and devices about fashion and beauty that
                                    could make them have some topics with their homie.</p>
@@ -150,8 +161,11 @@
                               <img src="../images/p_l_s_e_vpc.png" class="img-responsive" alt="Portfolio">
                          </div>
 
+                         <div class="clearfix"></div>
+                         <hr>
+
                          <div class="col-md-12 col-sm-12 text-center">
-                              <strong>From 0 to 1</strong>
+                              <h2>From 0 to 1</h2>
                               <p>We delivered a questionnaire to know the market of this product field and made a
                                    persona to make sure that every member of our team had the same mental picture of our
                                    target audience.</p>
@@ -161,16 +175,22 @@
                               <img src="../images/p_l_s_e_psn.png" class="img-responsive" alt="Portfolio">
                          </div>
 
+                         <div class="clearfix"></div>
+                         <hr>
+
                          <div class="col-md-12 col-sm-12 text-center">
-                              <strong>Wireframes</strong>
+                              <h2>Wireframes</h2>
                          </div>
 
                          <div class="col-md-12 col-sm-12">
                               <img src="../images/p_l_s_e_wrfae.png" class="img-responsive" alt="Portfolio">
                          </div>
 
+                         <div class="clearfix"></div>
+                         <hr>
+
                          <div class="col-md-12 col-sm-12 text-center">
-                              <strong>Mockups</strong>
+                              <h2>Mockups</h2>
                          </div>
                          <div class="col-md-12 col-sm-12">
                               <img src="../images/p_l_s_e_mk.png" class="img-responsive" alt="Portfolio">
@@ -183,8 +203,11 @@
                                    printer to have real custom-picture nail art.</p>
                          </div>
 
+                         <div class="clearfix"></div>
+                         <hr>
+
                          <div class="col-md-12 col-sm-12 text-center">
-                              <strong>Logo Design</strong>
+                              <h2>Logo Design</h2>
                               <p>I designed a logo font for Polishee - about creative, fashion, revolution and beauty.
                                    That
                                    was my first time to design about typograhpy and fonts.</p>
@@ -198,8 +221,11 @@
                               <img src="../images/p_l_s_e_lg.png" class="img-responsive" alt="Portfolio">
                          </div>
 
+                         <div class="clearfix"></div>
+                         <hr>
+
                          <div class="col-md-12 col-sm-12 text-center">
-                              <strong>Outcomes</strong>
+                              <h2>Outcomes</h2>
                               <p>The app was well received within our team and client. I'm also an engineer developing
                                    this project with React Native. While it has not yet been
                                    released, it has already worked with the test nail printer.</p>
