--- a/project/qrpa.html
+++ b/project/qrpa.html
@@ -99,6 +99,9 @@
                               <p>2018</p>
                          </div>
 
+                         <div class="clearfix"></div>
+                         <hr>
+
                          <div class="col-md-12 col-sm-12 text-center">
                               <strong>About This Product</strong>
 
