--- a/project/single-project.html
+++ b/project/single-project.html
@@ -97,6 +97,9 @@
                               <p>2018</p>
                          </div>
 
+                         <div class="clearfix"></div>
+                         <hr>
+
                          <div class="col-md-12 col-sm-12 text-center">
                               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
