fix: icon + about

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                          <span class="icon icon-bar"></span>
                     </button>
                     <a href="index.html" class="navbar-brand">
-                         <img src="images/wlogo.png">
+                         <img class="brand-icon" src="images/wlogo_2x.png">
                     </a>
                </div>
                <div class="collapse navbar-collapse">
@@ -188,7 +188,9 @@
                <div class="row">
 
                     <div class="col-md-3 col-sm-3">
-                         <a href="index.html"><img src="images/wlogo.png"></a>
+                         <a href="index.html">
+                              <img class="brand-icon" src="images/wlogo_2x.png">
+                         </a>
                     </div>
 
                     <div class="col-md-4 col-sm-4">
