--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                 </button>
-                <a href="index.html" class="navbar-brand"><img src="images/wlogo.png"></a>
+                <a href="index.html" class="navbar-brand"><img class="brand-icon" src="images/wlogo_2x.png"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -71,12 +71,12 @@
                     </div>
 
                     <div class="col-md-4 col-sm-12">
-                        <img src="images/w.png" class="img-responsive" alt="About">
+                        <img src="images/w.png" class="img-responsive" alt="About" style="margin-top:20px">
                     </div>
 
                     <div class="col-md-8 col-sm-12">
                         <!-- <h2>About</h2> -->
-                        <h3 style="margin-top: 0px">I'm a product designer based in Taiwan.</h3>
+                        <h3>I'm a product designer based in Taiwan.</h3>
                         <br>
                         <p>Enamored with cross-domain thinking, interface design, typography, user research, team work,
                             Javascript, React Native, Cajon, Ukulele, games experience research...</p>
@@ -130,7 +130,7 @@
             <div class="row">
 
                 <div class="col-md-3 col-sm-3">
-                    <a href="index.html"><img src="images/wlogo.png"></a>
+                    <a href="index.html"><img class="brand-icon" src="images/wlogo_2x.png"></a>
                 </div>
 
                 <div class="col-md-4 col-sm-4">
