--- a/project/nail.html
+++ b/project/nail.html
@@ -43,7 +43,8 @@
                          <span class="icon icon-bar"></span>
                          <span class="icon icon-bar"></span>
                     </button>
-                    <a href="../index.html" class="navbar-brand"><img src="../images/wlogo.png"></a>
+                    <a href="../index.html" class="navbar-brand"><img class="brand-icon"
+                              src="../images/wlogo_2x.png"></a>
                </div>
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -248,7 +249,7 @@
                <div class="row">
 
                     <div class="col-md-3 col-sm-3">
-                         <a href="../index.html"><img src="../images/wlogo.png"></a>
+                         <a href="../index.html"><img class="brand-icon" src="../images/wlogo_2x.png"></a>
                     </div>
 
                     <div class="col-md-4 col-sm-4">
