--- a/about.html
+++ b/about.html
@@ -45,11 +45,11 @@
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                 </button>
-                <a href="index.html" class="navbar-brand"><img class="brand-icon" src="images/wlogo_2x.png"></a>
+                <a href="/" class="navbar-brand"><img class="brand-icon" src="images/wlogo_2x.png"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Projects</a></li>
+                    <li><a href="./">Projects</a></li>
                     <li class="active"><a href="about.html">About</a></li>
                     <li><a href="mailto:hello@weichiwu.com">hello@weichiwu.com</a></li>
                 </ul>
