--- a/project/qrpa.html
+++ b/project/qrpa.html
@@ -43,12 +43,11 @@
                          <span class="icon icon-bar"></span>
                          <span class="icon icon-bar"></span>
                     </button>
-                    <a href="../index.html" class="navbar-brand"><img class="brand-icon"
-                              src="../images/wlogo_2x.png"></a>
+                    <a href="/" class="navbar-brand"><img class="brand-icon" src="../images/wlogo_2x.png"></a>
                </div>
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                         <li class="active"><a href="../index.html">Projects</a></li>
+                         <li class="active"><a href="/">Projects</a></li>
                          <li><a href="../about.html">About</a></li>
                          <li><a href="mailto:hello@weichiwu.com">hello@weichiwu.com</a></li>
                     </ul>
@@ -134,7 +133,7 @@
                <div class="row">
 
                     <div class="col-md-3 col-sm-3">
-                         <a href="../index.html"><img class="brand-icon" src="../images/wlogo_2x.png"></a>
+                         <a href="/"><img class="brand-icon" src="../images/wlogo_2x.png"></a>
                     </div>
 
                     <div class="col-md-4 col-sm-4">
