fix: about to index link

--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
             <div class="row">
 
                 <div class="col-md-3 col-sm-3">
-                    <a href="index.html"><img class="brand-icon" src="images/wlogo_2x.png"></a>
+                    <a href="/"><img class="brand-icon" src="images/wlogo_2x.png"></a>
                 </div>
 
                 <div class="col-md-4 col-sm-4">
