fix: qa image + string

--- a/project/nail.html
+++ b/project/nail.html
@@ -179,7 +179,7 @@
                          <hr>
 
                          <div class="col-md-12 col-sm-12 text-center">
-                              <h2>Wireframes</h2>
+                              <h2>Wireframes (excerpt)</h2>
                          </div>
 
                          <div class="col-md-12 col-sm-12">
@@ -190,7 +190,7 @@
                          <hr>
 
                          <div class="col-md-12 col-sm-12 text-center">
-                              <h2>Mockups</h2>
+                              <h2>Mockups (excerpt)</h2>
                          </div>
                          <div class="col-md-12 col-sm-12">
                               <img src="../images/p_l_s_e_mk.png" class="img-responsive" alt="Portfolio">
