--- a/project/su.html
+++ b/project/su.html
@@ -101,6 +101,8 @@
                               <img src="../images/d_c_2.png" class="img-responsive" style="float: right;">
                          </div>
 
+                         <div class="clearfix"></div>
+
                          <div class="col-md-12 col-sm-12 text-center" style="margin-top: 42px">
                               <a href="#">Next Project <i class="fa fa-long-arrow-right"></i></a>
                          </div>
