feat: ga + qetl

--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <html lang="en">
 
 <head>
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145855252-1"></script>
+     <script>
+          window.dataLayer = window.dataLayer || [];
 
+          function gtag() {
+               dataLayer.push(arguments);
+          }
+          gtag('js', new Date());
+
+          gtag('config', 'UA-145855252-1');
+     </script>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="">
@@ -84,11 +95,11 @@
                     <div class="col-md-6 col-sm-6">
                          <a href="project/nail.html">
                               <div class="portfolio-thumb">
-                                   <img src="images/p_l_s_e_.png" class="img-responsive" alt="Portfolio">
+                                   <img src="images/p_l_s_e_.png" class="img-responsive" alt="">
                                    <div class="portfolio-overlay">
                                         <div class="portfolio-item">
                                              <h3>Nail Printer App</h3>
-                                             <small>Product Design<br>UX Design</small>
+                                             <small>Product Design<br>UX/UI Design<br>App Development</small>
                                         </div>
                                    </div>
                               </div>
@@ -98,7 +109,7 @@
                     <div class="col-md-6 col-sm-6">
                          <a href="project/qrpa.html">
                               <div class="portfolio-thumb">
-                                   <img src="images/q_r_p_a_2x.png" class="img-responsive" alt="Portfolio">
+                                   <img src="images/q_r_p_a_2x.png" class="img-responsive" alt="">
                                    <div class="portfolio-overlay">
                                         <div class="portfolio-item">
                                              <h3>Replay Tool on Mac</h3>
@@ -110,13 +121,14 @@
                     </div>
 
                     <div class="col-md-6 col-sm-6">
-                         <a href="#">
+                         <a href="project/qrtl.html">
                               <div class="portfolio-thumb">
-                                   <img src="images/q_e_t_l.png" class="img-responsive" alt="Portfolio">
+                                   <img src="images/q_e_t_l.png" class="img-responsive" alt="">
                                    <div class="portfolio-overlay">
                                         <div class="portfolio-item">
                                              <h3>IOT Service of Smart Lock</h3>
-                                             <small>UX Design</small>
+                                             <small>User Scenario</small>
+                                             <small>Service Design</small>
                                         </div>
                                    </div>
                               </div>
@@ -126,7 +138,7 @@
                     <div class="col-md-6 col-sm-6">
                          <a href="project/su.html">
                               <div class="portfolio-thumb">
-                                   <img src="images/d_c_.png" class="img-responsive" alt="Portfolio">
+                                   <img src="images/d_c_.png" class="img-responsive" alt="">
                                    <div class="portfolio-overlay">
                                         <div class="portfolio-item">
                                              <h3>Online Course Platform</h3>
@@ -140,7 +152,7 @@
                     <!-- <div class="col-md-4 col-sm-6">
                          <a href="project/single-project.html">
                               <div class="portfolio-thumb">
-                                   <img src="images/portfolio-img5.jpg" class="img-responsive" alt="Portfolio">
+                                   <img src="images/portfolio-img5.jpg" class="img-responsive" alt="">
                                    <div class="portfolio-overlay">
                                         <div class="portfolio-item">
                                              <h3>Project Name</h3>
@@ -154,7 +166,7 @@
                     <div class="col-md-4 col-sm-6">
                          <a href="project/single-project.html">
                               <div class="portfolio-thumb">
-                                   <img src="images/portfolio-img6.jpg" class="img-responsive" alt="Portfolio">
+                                   <img src="images/portfolio-img6.jpg" class="img-responsive" alt="">
                                    <div class="portfolio-overlay">
                                         <div class="portfolio-item">
                                              <h3>Project Name</h3>
