--- a/project/qrpa.html
+++ b/project/qrpa.html
@@ -2,6 +2,18 @@
 <html lang="en">
 
 <head>
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145855252-1"></script>
+     <script>
+          window.dataLayer = window.dataLayer || [];
+
+          function gtag() {
+               dataLayer.push(arguments);
+          }
+          gtag('js', new Date());
+
+          gtag('config', 'UA-145855252-1');
+     </script>
      <meta name="robots" content="noindex">
      <meta name="googlebot" content="noindex">
      <meta charset="UTF-8">
@@ -18,7 +30,7 @@
      <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
 
      <!-- Favicons -->
-     <link rel="shortcut icon" href="images/favicon.png">
+     <link rel="shortcut icon" href="../images/favicon.png">
 
 </head>
 
@@ -66,19 +78,20 @@
                     <div class="col-md-offset-1 col-md-10 col-sm-12">
 
                          <h1>QAReplay</h1>
+                         <p>I was the sole designer and the sole web developer in this project.</p>
                          <p>This product records your screen but only saves the latest 15 secs. It helps you catch the
                               unexpected behaviors when you're testing your product.</p>
 
                          <div class="col-md-12 col-sm-12">
-                              <img src="../images/qrpa_banner.png" class="img-responsive" alt="Portfolio">
+                              <img src="../images/qrpa_banner.png" class="img-responsive" alt="">
                          </div>
 
                          <div class="col-md-6 col-sm-6">
-                              <img src="../images/q_r_p_a_lg.png" class="img-responsive" alt="Portfolio">
+                              <img src="../images/q_r_p_a_lg.png" class="img-responsive" alt="">
                          </div>
 
                          <div class="col-md-6 col-sm-6">
-                              <img src="../images/q_r_p_a_gif.gif" class="img-responsive" alt="Portfolio">
+                              <img src="../images/q_r_p_a_gif.gif" class="img-responsive" alt="">
                          </div>
 
                          <div class="clearfix"></div>
@@ -113,7 +126,7 @@
                          </div>
 
                          <div class="col-md-12 col-sm-12">
-                              <img src="../images/q_r_p_a_dm_big.png" class="img-responsive" alt="Portfolio">
+                              <img src="../images/q_r_p_a_dm_big.png" class="img-responsive" alt="">
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center" style="margin-top: 42px">
