--- a/project/qrtl.html
+++ b/project/qrtl.html
@@ -76,88 +76,98 @@
                <div class="row">
 
                     <div class="col-md-offset-1 col-md-10 col-sm-12">
-                         <h1>Polishee</h1>
+                         <h1>Q-Rental</h1>
                          <div class="clearfix"></div>
                          <hr>
-                         <p>I was the sole designer and one-of-two react native engineer on a 5-person team. We
-                              cooperated
-                              with a hardware company to build an
-                              app for people to print any images on their nails.</p>
+                         <p>I was a product designer on a three-person mock startup team.</p>
+                         <p>We created Q-Rental, a service for daily rental suite holder and passenger that made them
+                              have a better experience in the transaction process.</p>
 
                          <div class="col-md-12 col-sm-12">
-                              <img src="../images/p_l_s_e_dm.png" class="img-responsive" alt="">
+                              <img src="../images/q_e_t_l_bnr.png" class="img-responsive" alt="">
                          </div>
 
                          <div class="clearfix"></div>
 
                          <div class="col-md-6 col-sm-6">
                               <h3>Role</h3>
-                              <p>User Research</p>
-                              <p>Brand Design</p>
-                              <p>Interface Design</p>
-                              <p>App Development</p>
+                              <p>Service Design</p>
+                              <p>Contextual Inquiry</p>
                          </div>
 
                          <div class="col-md-3 col-sm-3">
                               <h3>Length</h3>
-                              <p>8 months</p>
+                              <p>3 months</p>
                          </div>
 
                          <div class="col-md-3 col-sm-3">
                               <h3>Year</h3>
-                              <p>2018-19</p>
+                              <p>2015</p>
                          </div>
 
                          <div class="clearfix"></div>
                          <hr>
 
                          <div class="col-md-12 col-sm-12 text-center">
-                              <h2>About This Product</h2>
-                              <p>This app allows users to choose images from our library or upload from album and
-                                   preview on a mock hand to see the result of nail arts, then print them on nails as
-                                   they wish.</p>
+                              <h2>About This Project</h2>
+                              <p>This product of service provides a method for landlords and tenants with an IoT
+                                   smart lock.</p>
+                              <p>For landlords, this system integrates daily rental suite transaction behavior
+                                   processes. They can manage any rooms remotely by the app.</p>
+                              <p>For tenants, they can visit the app and book the room they want in the app. After the
+                                   order set up, they can visit to the room and unlock the smart lock by app.</p>
                          </div>
 
                          <div class="clearfix"></div>
                          <hr>
 
                          <div class="col-md-12 col-sm-12 text-center">
-                              <h2>Key Features</h2>
+                              <h2>User Scenarios</h2>
                          </div>
-
                          <div class="col-md-12 col-sm-12">
                               <div class="col-md-4 col-sm-12">
-                                   <img src="../images/p_l_s_e_kf_1.png" class="img-responsive box-shadow">
+                                   <img src="../images/q_e_t_l_1.png" class="img-responsive box-shadow">
                               </div>
 
                               <div class="col-md-8 col-sm-12">
-                                   <h3>1. Pick or upload images</h3>
-                                   <p>Users can pick any images from the image library we provided or upload photos from
-                                        their album.</p>
+                                   <h3>1.Search for room type</h3>
+                                   <p>The operators put rented information on the platform to make it easier for
+                                        visitors to search, browse and compare.</p>
                               </div>
                          </div>
-
                          <div class="col-md-12 col-sm-12">
                               <div class="col-md-4 col-sm-12">
-                                   <img src="../images/p_l_s_e_kf_2.png" class="img-responsive box-shadow">
+                                   <img src="../images/q_e_t_l_2.png" class="img-responsive box-shadow">
                               </div>
 
                               <div class="col-md-8 col-sm-12">
-                                   <h3>2. Preview</h3>
-                                   <p>Second, users can put images on the photo of real hands to simulate the nail arts.
-                                   </p>
+                                   <h3>2. Third party payment</h3>
+                                   <p>Consumers use the APP platform to connect with credit cards to complete a fast and
+                                        secure payment process, as well as to secure transactions between the two
+                                        parties.</p>
                               </div>
                          </div>
-
                          <div class="col-md-12 col-sm-12">
                               <div class="col-md-4 col-sm-12">
-                                   <img src="../images/p_l_s_e_kf_3.png" class="img-responsive box-shadow">
+                                   <img src="../images/q_e_t_l_3.png" class="img-responsive box-shadow">
                               </div>
 
                               <div class="col-md-8 col-sm-12">
-                                   <h3>3. Link and Print</h3>
-                                   <p>After previewing, users can link the app to our nail-printer via Wi-Fi and print
-                                        images on nails in only a few seconds.</p>
+                                   <h3>3. Smart lock</h3>
+                                   <p>After confirming the payment, the passenger can obtain the door lock management
+                                        authority without waiting for the consumer, personally bringing the position and
+                                        delivering the key.</p>
+                              </div>
+                         </div>
+                         <div class="col-md-12 col-sm-12">
+                              <div class="col-md-4 col-sm-12">
+                                   <img src="../images/q_e_t_l_4.png" class="img-responsive box-shadow">
+                              </div>
+
+                              <div class="col-md-8 col-sm-12">
+                                   <h3>4. Rating System</h3>
+                                   <p>The tenant and the landlord share the accommodation and give an evaluation, and
+                                        provide objective opinions of the follow-up landlord and the tenant.</p>
                               </div>
                          </div>
 
@@ -165,73 +175,12 @@
                          <hr>
 
                          <div class="col-md-12 col-sm-12 text-center">
-                              <h2>User and Audience</h2>
-                              <p>The target users are young girls interesting in nail arts and passionating about DIY at
-                                   home. These users like innovation products and devices about fashion and beauty that
-                                   could make them have some topics with their homie.</p>
+                              <h2>Environmental Analysis</h2>
+                              <!-- <p></p> -->
                          </div>
 
                          <div class="col-md-12 col-sm-12">
-                              <img src="../images/p_l_s_e_vpc.png" class="img-responsive" alt="">
-                         </div>
-
-                         <div class="clearfix"></div>
-                         <hr>
-
-                         <div class="col-md-12 col-sm-12 text-center">
-                              <h2>From 0 to 1</h2>
-                              <p>We delivered a questionnaire to know the market of this product field and made a
-                                   persona to make sure that every member of our team had the same mental picture of our
-                                   target audience.</p>
-                         </div>
-
-                         <div class="col-md-12 col-sm-12">
-                              <img src="../images/p_l_s_e_psn.png" class="img-responsive" alt="">
-                         </div>
-
-                         <div class="clearfix"></div>
-                         <hr>
-
-                         <div class="col-md-12 col-sm-12 text-center">
-                              <h2>Wireframes (excerpt)</h2>
-                         </div>
-
-                         <div class="col-md-12 col-sm-12">
-                              <img src="../images/p_l_s_e_wrfae.png" class="img-responsive" alt="">
-                         </div>
-
-                         <div class="clearfix"></div>
-                         <hr>
-
-                         <div class="col-md-12 col-sm-12 text-center">
-                              <h2>Mockups (excerpt)</h2>
-                         </div>
-                         <div class="col-md-12 col-sm-12">
-                              <img src="../images/p_l_s_e_mk.png" class="img-responsive" alt="">
-                         </div>
-
-                         <div class="col-md-12 col-sm-12 text-center">
-                              <p>For smoothly experience, I designed a component called Palette to store and show images
-                                   that user chose. They can quickly store some images they like and put them on the
-                                   mock screen to simulate the nail arts on their fingers, then send these images to the
-                                   nail printer to have real custom-picture nail art.</p>
-                         </div>
-
-                         <div class="clearfix"></div>
-                         <hr>
-
-                         <div class="col-md-12 col-sm-12 text-center">
-                              <h2>Logo Design</h2>
-                              <p>I designed a logo font for Polishee - about creative, fashion, revolution and beauty.
-                              </p>
-                         </div>
-
-                         <div class="col-md-6 col-sm-6">
-                              <img src="../images/p_l_s_e_lg2.png" class="img-responsive" alt="">
-                         </div>
-
-                         <div class="col-md-6 col-sm-6">
-                              <img src="../images/p_l_s_e_lg.png" class="img-responsive" alt="">
+                              <img src="../images/q_e_t_l_ea.png" class="img-responsive" alt="">
                          </div>
 
                          <div class="clearfix"></div>
@@ -239,9 +188,7 @@
 
                          <div class="col-md-12 col-sm-12 text-center">
                               <h2>Outcomes</h2>
-                              <p>The app was well received within our team and client. I'm also an engineer developing
-                                   this project with React Native. While it has not yet been
-                                   released, it has already worked with the test nail printer.</p>
+                              <p></p>
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center" style="margin-top: 42px">
