--- a/project/su.html
+++ b/project/su.html
@@ -2,6 +2,18 @@
 <html lang="en">
 
 <head>
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145855252-1"></script>
+     <script>
+          window.dataLayer = window.dataLayer || [];
+
+          function gtag() {
+               dataLayer.push(arguments);
+          }
+          gtag('js', new Date());
+
+          gtag('config', 'UA-145855252-1');
+     </script>
      <meta name="robots" content="noindex">
      <meta name="googlebot" content="noindex">
      <meta charset="UTF-8">
@@ -17,7 +29,7 @@
      <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
 
      <!-- Favicons -->
-     <link rel="shortcut icon" href="images/favicon.png">
+     <link rel="shortcut icon" href="../images/favicon.png">
 
 </head>
 
@@ -64,11 +76,12 @@
 
                     <div class="col-md-offset-1 col-md-10 col-sm-12">
                          <h1>Skill-Up</h1>
+                         <p>I am the sole designer and one-of-two react native engineer on a 5-person team. </p>
                          <p>Skill-Up is an online course platform. Users can read the news, listen to podcasts, watch
                               videos and take some quiz on it.</p>
 
                          <div class="col-md-12 col-sm-12">
-                              <img src="../images/d_c_dm.png" class="img-responsive" alt="Portfolio">
+                              <img src="../images/d_c_dm.png" class="img-responsive" alt="">
                          </div>
 
                          <div class="clearfix" style="clear: both"></div>
@@ -94,7 +107,7 @@
                          <hr>
 
                          <div class="col-md-6 col-sm-6">
-                              <img src="../images/d_c_.png" class="img-responsive" alt="Portfolio">
+                              <img src="../images/d_c_.png" class="img-responsive" alt="">
                          </div>
 
                          <div class="col-md-6 col-sm-6">
