--- a/project/single-project.html
+++ b/project/single-project.html
@@ -17,7 +17,7 @@
      <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
 
      <!-- Favicons -->
-     <link rel="shortcut icon" href="images/favicon.png">
+     <link rel="shortcut icon" href="../images/favicon.png">
 
 </head>
 
@@ -69,15 +69,15 @@
                               laboris nisi ut aliquip ex ea commodo consequat.</p>
 
                          <div class="col-md-12 col-sm-12">
-                              <img src="../images/single-project-img.jpg" class="img-responsive" alt="Portfolio">
+                              <img src="../images/single-project-img.jpg" class="img-responsive" alt="">
                          </div>
 
                          <div class="col-md-6 col-sm-6">
-                              <img src="../images/portfolio-img2.jpg" class="img-responsive" alt="Portfolio">
+                              <img src="../images/portfolio-img2.jpg" class="img-responsive" alt="">
                          </div>
 
                          <div class="col-md-6 col-sm-6">
-                              <img src="../images/portfolio-img3.jpg" class="img-responsive" alt="Portfolio">
+                              <img src="../images/portfolio-img3.jpg" class="img-responsive" alt="">
                          </div>
 
                          <div class="clearfix"></div>
