--- a/project/qrpa.html
+++ b/project/qrpa.html
@@ -130,7 +130,7 @@
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center" style="margin-top: 42px">
-                              <a href="#">Next Project <i class="fa fa-long-arrow-right"></i></a>
+                              <a href="qrtl.html">Next Project <i class="fa fa-long-arrow-right"></i></a>
                          </div>
 
                     </div>
