--- a/project/qrtl.html
+++ b/project/qrtl.html
@@ -154,7 +154,7 @@
 
                               <div class="col-md-8 col-sm-12">
                                    <h3>3. Smart lock</h3>
-                                   <p>After confirming the payment, the passenger can obtain the door lock management
+                                   <p>After confirming the payment, the tenant can obtain the door lock management
                                         authority without waiting for the consumer, personally bringing the position and
                                         delivering the key.</p>
                               </div>
@@ -176,10 +176,6 @@
 
                          <div class="col-md-12 col-sm-12 text-center">
                               <h2>Environmental Analysis</h2>
-                              <!-- <p></p> -->
-                         </div>
-
-                         <div class="col-md-12 col-sm-12">
                               <img src="../images/q_e_t_l_ea.png" class="img-responsive" alt="">
                          </div>
 
@@ -187,12 +183,76 @@
                          <hr>
 
                          <div class="col-md-12 col-sm-12 text-center">
-                              <h2>Outcomes</h2>
-                              <p></p>
+                              <h2>Contextual Inquiry – Sequence Model</h2>
+                              <p>After several interviews and actual experiences, we tried to do some analysis on the
+                                   current service process. We built a Sequence Model and figured out the intents and
+                                   the difficulties of
+                                   landlord.</p>
+                              <img src="../images/q_e_t_l_sqmd.png" class="img-responsive" alt="">
+                         </div>
+
+                         <div class="col-md-12 col-sm-12 text-center">
+                              <h2>Users' Needs (Landlords)</h2>
+                              <div class="col-md-2 col-sm-2"></div>
+                              <div class="col-md-8 col-sm-8">
+                                   <p>1: Simplify the process of booking</p>
+                                   <p>2: Reduce hospitality time</p>
+                                   <p>3: Simplify the process of bringing room</p>
+                                   <p>4: Reduce the uncertainty of meeting difficult customers</p>
+                              </div>
+                              <div class="col-md-2 col-sm-2"></div>
+                         </div>
+
+                         <div class="col-md-12 col-sm-12 text-center">
+                              <h2>Users' Needs (Tenants)</h2>
+                              <div class="col-md-2 col-sm-2"></div>
+                              <div class="col-md-8 col-sm-8">
+                                   <p>1: Simplify the process of booking</p>
+                                   <p>2: Reduce the time waiting landlord</p>
+                                   <p>3: Simplify the process of check-in</p>
+                                   <p>4: Reduce the uncertainty of meeting difficult landlords</p>
+                              </div>
+                              <div class="col-md-2 col-sm-2"></div>
+                         </div>
+
+                         <div class="clearfix"></div>
+                         <hr>
+
+                         <div class="col-md-12 col-sm-12 text-center">
+                              <h2>Service Blueprints</h2>
+                              <p>We created a service called Q-Rental trying to improve the process of orginal service.
+                                   With an IoT smart lock and an app, both of landlord and tenant could have a faster,
+                                   smarter, safer journey.</p>
+                              <img src="../images/q_e_t_l_sb.png" class="img-responsive" alt="">
+                         </div>
+
+                         <div class="clearfix"></div>
+                         <hr>
+
+                         <div class="col-md-12 col-sm-12 text-center">
+                              <h2>Service Model Design</h2>
+                              <!-- <p></p> -->
+                              <img src="../images/q_e_t_l_smd.png" class="img-responsive" alt="">
+                         </div>
+
+                         <div class="clearfix"></div>
+                         <hr>
+
+                         <div class="col-md-12 col-sm-12 text-center">
+                              <h2>Conculsion</h2>
+                              <p>Although we are unable to verify whether our hypothesis actually improves the
+                                   experience flow of both platforms due to the current Taiwan law and the lack of
+                                   hardware equipment.</p>
+
+                              <p>However, our experience in the actual service design process and field interviews can
+                                   also see some problems that current users are likely to encounter.</p>
+
+                              <p>We expect other opportunities to import this system in the future and continue to
+                                   improve the experience of the tenant and the landlord</p>
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center" style="margin-top: 42px">
-                              <a href="qrpa.html">Next Project <i class="fa fa-long-arrow-right"></i></a>
+                              <a href="su.html">Next Project <i class="fa fa-long-arrow-right"></i></a>
                          </div>
 
                     </div>
