--- a/project/su.html
+++ b/project/su.html
@@ -117,7 +117,7 @@
                          <div class="clearfix"></div>
 
                          <div class="col-md-12 col-sm-12 text-center" style="margin-top: 42px">
-                              <a href="#">Next Project <i class="fa fa-long-arrow-right"></i></a>
+                              <a href="nail.html">Next Project <i class="fa fa-long-arrow-right"></i></a>
                          </div>
 
                     </div>
