--- a/about.html
+++ b/about.html
@@ -128,6 +128,15 @@
                             <li>Lean UX</li>
                         </ul>
                     </div>
+
+                    <div class="clearfix"></div>
+                    <hr>
+
+                    <div class="col-md-12 col-sm-12 text-center">
+                        <p><a href="file/WeiChi_Wu_Resume.pdf">My Resume</a></p>
+                    </div>
+
+
                 </div>
 
             </div>
