--- a/about.html
+++ b/about.html
@@ -104,8 +104,8 @@
                         <ul>
                             <li>Pruduct Design</li>
                             <li>User Research</li>
+                            <li>Wireframes and Mockups</li>
                             <li>Prototyping</li>
-                            <li>Creative Direction</li>
                         </ul>
                     </div>
 
