--- a/project/qrtl.html
+++ b/project/qrtl.html
@@ -252,7 +252,7 @@
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center" style="margin-top: 42px">
-                              <a href="su.html">Next Project <i class="fa fa-long-arrow-right"></i></a>
+                              <a href="qrpa.html">Next Project <i class="fa fa-long-arrow-right"></i></a>
                          </div>
 
                     </div>
