--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
           gtag('config', 'UA-145855252-1');
      </script>
+     <meta name="robots" content="noindex">
+     <meta name="googlebot" content="noindex">
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="">
