--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
                     <div class="col-md-4 col-sm-6">
                         <h3>Design</h3>
                         <ul>
-                            <li>Pruduct Design</li>
+                            <li>Product Design</li>
                             <li>User Research</li>
                             <li>Wireframes and Mockups</li>
                             <li>Prototyping</li>
