--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
                     <hr>
 
                     <div class="col-md-12 col-sm-12 text-center">
-                        <p><a href="file/WeiChi_Wu_Resume.pdf">My Resume</a></p>
+                        <!-- <p><a href="file/WeiChi_Wu_Resume.pdf">My Resume</a></p> -->
                     </div>
 
 
